[gd_scene load_steps=8 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/songSamples/BO_HWD_140_Keys_Loop_Piano_High_Ching_Em.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/atmospheres/FF_HFX_hit_lilac.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/atmospheres/FF_HFFX_atmosphere_thunder_dark_sky.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/GUI/PNG_Window/Skills.png" type="Texture" id=5]
[ext_resource path="res://defaultFontSmall.tres" type="Theme" id=6]
[ext_resource path="res://defaultFont.tres" type="Theme" id=7]

[node name="TitleScreen" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 51.0
texture = ExtResource( 5 )
expand = true

[node name="start" type="Button" parent="CanvasLayer"]
margin_left = 60.0
margin_top = 135.0
margin_right = 263.0
margin_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 6 )
text = "START"
flat = true

[node name="debug" type="Button" parent="CanvasLayer"]
margin_left = 60.0
margin_top = 211.0
margin_right = 263.0
margin_bottom = 254.0
theme = ExtResource( 6 )
text = "debug"
flat = true

[node name="load" type="Button" parent="CanvasLayer"]
margin_left = 60.0
margin_top = 285.0
margin_right = 263.0
margin_bottom = 328.0
theme = ExtResource( 6 )
text = "LOAD"
flat = true

[node name="clearScores" type="Button" parent="CanvasLayer"]
margin_left = 60.0
margin_top = 361.0
margin_right = 263.0
margin_bottom = 404.0
theme = ExtResource( 6 )
text = "RESET SCORE"
flat = true

[node name="quit" type="Button" parent="CanvasLayer"]
margin_left = 60.0
margin_top = 444.0
margin_right = 263.0
margin_bottom = 487.0
theme = ExtResource( 6 )
text = "QUIT"
flat = true

[node name="header" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -198.0
margin_top = 13.0
margin_right = 201.0
margin_bottom = 83.0
theme = ExtResource( 7 )
text = "ZOMBIE SHOOTER"
align = 1
uppercase = true

[node name="highScore" type="Label" parent="CanvasLayer"]
margin_left = 426.0
margin_top = 131.0
margin_right = 786.0
margin_bottom = 192.0
theme = ExtResource( 7 )
text = "-- HIGH SCORE --"
align = 1

[node name="highestRound" type="Label" parent="CanvasLayer"]
margin_left = 460.0
margin_top = 216.0
margin_right = 598.0
margin_bottom = 247.0
theme = ExtResource( 6 )
text = "Round:"

[node name="highestRoundVal" type="Label" parent="CanvasLayer"]
margin_left = 658.0
margin_top = 216.0
margin_right = 736.0
margin_bottom = 293.0
theme = ExtResource( 6 )
text = "0
"

[node name="mostKills" type="Label" parent="CanvasLayer"]
margin_left = 460.0
margin_top = 267.0
margin_right = 598.0
margin_bottom = 298.0
theme = ExtResource( 6 )
text = "Kills:"

[node name="mostKillsVal" type="Label" parent="CanvasLayer"]
margin_left = 658.0
margin_top = 267.0
margin_right = 796.0
margin_bottom = 344.0
theme = ExtResource( 6 )
text = "0
"
__meta__ = {
"_editor_description_": ""
}

[node name="roundsFired" type="Label" parent="CanvasLayer"]
margin_left = 460.0
margin_top = 312.0
margin_right = 598.0
margin_bottom = 349.0
theme = ExtResource( 6 )
text = "Shots fired:"
__meta__ = {
"_editor_description_": ""
}

[node name="roundsFiredVal" type="Label" parent="CanvasLayer"]
margin_left = 658.0
margin_top = 312.0
margin_right = 796.0
margin_bottom = 389.0
theme = ExtResource( 6 )
text = "0
"
__meta__ = {
"_editor_description_": ""
}

[node name="roundsHit" type="Label" parent="CanvasLayer"]
margin_left = 460.0
margin_top = 361.0
margin_right = 598.0
margin_bottom = 398.0
theme = ExtResource( 6 )
text = "Shots hit:"
__meta__ = {
"_editor_description_": ""
}

[node name="roundsHitVal" type="Label" parent="CanvasLayer"]
margin_left = 658.0
margin_top = 361.0
margin_right = 796.0
margin_bottom = 438.0
theme = ExtResource( 6 )
text = "0
"
__meta__ = {
"_editor_description_": ""
}

[node name="Accuracy" type="Label" parent="CanvasLayer"]
margin_left = 460.0
margin_top = 419.0
margin_right = 598.0
margin_bottom = 456.0
theme = ExtResource( 6 )
text = "Accuracy:"
__meta__ = {
"_editor_description_": ""
}

[node name="AccuracyVal" type="Label" parent="CanvasLayer"]
margin_left = 658.0
margin_top = 419.0
margin_right = 796.0
margin_bottom = 496.0
theme = ExtResource( 6 )
text = "0
"
__meta__ = {
"_editor_description_": ""
}

[node name="titleAmbiance1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[node name="impact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true

[node name="weatherAmbiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
autoplay = true

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="CanvasLayer/start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/debug" to="." method="_on_debug_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/debug" to="." method="_on_debug_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/debug" to="." method="_on_debug_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/load" to="." method="_on_load_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/load" to="." method="_on_load_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/load" to="." method="_on_load_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/clearScores" to="." method="_on_clearScores_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/clearScores" to="." method="_on_clearScores_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/clearScores" to="." method="_on_clearScores_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/quit" to="." method="_on_quit_pressed"]
